# R2R

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR.md  Dockerfile  Dockerfile.custom  Dockerfile.slim  Dockerfile.unstructured  Dockerfile_dev  LICENSE.md  MAKEFILE.md  MANIFEST.md  MCP_INTEGRATION.md  Makefile  Modelfile  README.md  README.md~498cdc082f75847560343152be517c706ae7b062  SECURITY.md  SUPABASE_SETUP.md  TEMPLATE_README.md  TEMPLATE_VERSION.md  Todo  alembic.ini  apply-fixes.sh  compose.full.swarm.yaml  compose.full.yaml  compose.neo4j.yaml  compose.ollama.yaml  compose.postgres.yaml  compose.yaml  compose.yamlORIG  config.json  (+27 more)
migrations/: Dockerfile  alembic.ini  env.py  pyproject.toml
migrations/versions/: 420467471060_add_ingestion_and_restructuring_status.py
py/: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile copy  Dockerfile.dev  Dockerfile.fuse  Dockerfile.unstructured  README.md  alembic.ini  all_possible_config.toml  compose.full.yaml  compose.full_with_replicas.yaml  compose.hatchet.yaml  compose.memgraph.yaml  compose.neo4j.yaml  compose.ollama.yaml  compose.postgres.yaml  compose.unstructured.yaml  compose.yaml  dump.txt  env.py  mistral.py  nginx.conf  pyproject.toml  r2r.toml  r2r_light.toml  r2r_memgraph.toml  setup.py  setup.sh  stop.sh  test.py  test.toml  test_chunking.py  test_mailersend.py
py/argocd/: dev-autosync.yaml  ongc-autosync.yaml  prod-autosync.yaml
py/cli/: __init__.py  cli.py  command_group.py  main.py
py/cli/commands/: auth.py  collections.py  config.py  conversations.py  database.py  documents.py  graphs.py  indices.py  ingestion.py  kg.py  management.py  prompts.py  restructure.py  retrieval.py  server.py  system.py  templates.py  users.py
py/cli/utils/: database_utils.py  docker_utils.py  param_types.py  telemetry.py  timer.py
py/core/: __init__.py
py/core/agent/: __init__.py  base.py  rag.py  rag_pyd.py  research.py  serper.py
py/core/base/: __init__.py
py/core/cli/: cli.py  command_group.py
py/core/configs/: azure_llm.toml  core_local_llm.toml  full.toml  full_azure.toml  full_azure_llm.toml  full_lm_studio.toml  full_local_llm.toml  full_local_llm_lm_studio.toml  full_local_llm_ollama.toml  full_ollama.toml  fuse_azure.toml  fuse_azure_with_test_limits.toml  fuse_with_auth.toml  gemini.toml  lm_studio.toml  local_llm.toml  local_llm_lm_studio.toml  local_llm_memgrpah_kg.toml  local_llm_neo4j_kg.toml  local_llm_ollama.toml  memgraph_kg.toml  memgraph_kg_no_vector_postgres.toml  neo4j_kg.toml  neo4j_kg_no_vector_postgres.toml  ollama.toml  r2r_aws_bedrock.toml  r2r_azure.toml  r2r_azure_with_test_limits.toml  r2r_full_local_llm.toml  r2r_with_auth.toml  tavily.toml  unstructured.toml
py/core/database/: __init__.py  base.py  chunks.py  collections.py  conversations.py  documents.py  files.py  filters.py  graphs.py  limits.py  postgres.py  prompts_handler.py  tokens.py  users.py
py/core/docs/: tavily.md
py/core/examples/: hello_fuse.py  hello_r2r.ipynb  hello_r2r.py
py/core/main/: __init__.py  abstractions.py  app.py  app_entry.py  config.py  engine.py  execution.py  r2r.py
py/core/parsers/: __init__.py
py/core/pipelines/: __init__.py  graph_enrichment.py  ingestion_pipeline.py  rag_pipeline.py  search_pipeline.py
py/core/pipes/: __init__.py
py/core/providers/: __init__.py
py/core/smolagent/: __init__.py  agent.py
py/core/telemetry/: events.py  posthog.py  telemetry_decorator.py
py/core/utils/: __init__.py  context.py  logging_config.py  sentry.py  serper.py  upload_directories_files.py
py/docs/: PII_DETECTION.md
py/fuse/: compose.full.yaml  compose.full_with_replicas.yaml  compose.yaml  docker-compose.full.yaml  r2r.toml
py/migrations/: alembic.ini  env.py  script.py.mako
py/migrations/versions/: 2fac23e4d91b_migrate_to_document_search.py  3efc7b3b1b3d_add_total_tokens_count.py  7eb70560f406_add_limits_overrides_to_users.py  8077140e1e99_v3_api_database_revision.py  9f1f30b182ae_3_2_16.py  c45a9cf6a8a4_add_user_and_document_count_to_.py  d342e632358a_migrate_to_asyncpg.py  e342e632358b_migrate_to_asyncpg.py
py/r2r/: __init__.py  compose.full.swarm.yaml  compose.full.yaml  compose.full_with_replicas.yaml  compose.test.yaml  compose.yaml  mcp.py  r2r.toml  serve.py
py/r2r/scripts/: setup-token.sh
py/scripts/: backfill_document_summaries.py  delete_files_and_vacuum.py  download_nltk_data.py  remove_duplicate_documents.py
py/sdk/: README.md  __init__.py  aauth.py  async_client.py  auth.py  auth_helpers.py  base_client.py  client.py  client_async.py  eval.py  ingestion.py  kg.py  management.py  models.py  restructure.py  retrieval.py  server.py  sync_client.py  utils.py
py/sdk/asnyc_methods/: __init__.py  chunks.py  collections.py  conversations.py  documents.py  graphs.py  indices.py  prompts.py  retrieval.py  system.py  users.py
py/sdk/base/: base_client.py
py/sdk/mixins/: __init__.py  auth.py  ingestion.py  kg.py  management.py  retrieval.py  server.py
py/sdk/sync_methods/: chunks.py  collections.py  conversations.py  documents.py  graphs.py  indices.py  prompts.py  retrieval.py  system.py  users.py
py/sdk/v2/: __init__.py  auth.py  ingestion.py  kg.py  management.py  retrieval.py  server.py  sync_auth.py  sync_ingestion.py  sync_kg.py  sync_management.py  sync_retrieval.py  sync_server.py
py/sdk/v3/: __init__.py  chunk.py  chunks.py  collections.py  communities.py  conversations.py  document.py  documents.py  entities.py  (+7 more)
py/shared/: __init__.py
py/tests/: conftest.py  rateLimit.bash  test_abstractions.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_database.py  test_embedding.py  test_end_to_end.py  test_groups.py  test_groups_client.py  test_ingestion_service.py  test_kg.py  test_llms.py  test_logging.py  test_parser.py  test_pipeline.py  test_vector_db.py
r2r-python-sdk/: pyproject.toml
r2r-python-sdk/r2r_python_sdk/: auth.py  ingestion.py  retrieval.py
(+2618 files in other folders)
