[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "r2r"
version = "0.1.36"
description = "SciPhi R2R"
authors = ["Owen Colegrove <owen@sciphi.ai>"]
license = "MIT"
readme = "README.md"
include = ["config.json"]

[tool.poetry.dependencies]
# Python Versions
python = ">=3.9,<3.13"

# Required dependencies

# python
pydantic = "^2.6.3"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"

# infrastructure
fastapi = "^0.109.2"
fire = "^0.5.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
types-requests = "^2.31.0"
uvicorn = "^0.27.0.post1"

# TODO - Make some of these optional
# async db providers
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
redis = "^5.0.4"

# ingestion
boto3 = {version = "^1.34.71", optional = true}
bs4 = "^0.0.2"
openpyxl = "^3.1.2"
markdown = "^3.6"
pypdf = "^4.2.0"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"
nest-asyncio = "^1.6.0"

# embedding providers
tiktoken = {version = "^0.5.2", optional = true}
sentence-transformers = {version = "^2.7.0", optional = true}

# vector db providers
vecs = "^0.4.0"
qdrant_client = {version = "^1.7.0", optional = true}

# llm providers
litellm = "^1.35.18"
openai = "^1.11.1"
llama-cpp-python = {version = "^0.2.57", optional = true}

# integrations
ionic-api-sdk = {version = "0.9.3", optional = true}
exa-py = {version = "^1.0.9", optional = true}

[tool.poetry.extras]
all = ["tiktoken", "datasets", "qdrant_client", "psycopg2-binary", "sentry-sdk", "boto3", "exa-py", "llama-cpp-python", "ionic-api-sdk"]
exa = ["exa-py"]
ionic = ["ionic-api-sdk"]
local-llm = ["llama-cpp-python", "sentence-transformers"]
qdrant = ["qdrant_client"]
reducto = ["boto3"]
sentence-transformers-only = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "^1.5.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-dependency = "^0.6.0"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = 'playground/.*|deprecated/.*|dump/.*|docs/source|vecs/*'

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true