[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "r2r-python-sdk"
version = "0.1.0"
description = "Lightweight Python SDK for R2R"
authors = ["Owen Colegrove <owen@sciphi.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Python Versions
python = ">=3.9,<3.13"
httpx = "^0.27.0"
nest-asyncio = "^1.6.0"
fastapi = "^0.109.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
codecov = "^2.1.13"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "^1.5.1"
pre-commit = "^2.9"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-dependency = "^0.6.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
colorama = "^0.4.6"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | build
  | dist
)/
'''
skip-string-normalization = true
skip-magic-trailing-comma = false
